- Ixoth and the Chromatic Dragon are both affected by dragon changes, and as
  such are potentially nastier.

New Races
- Merfolk: Start with swimming, and eventually learn to breath water. This is
  made up for by low maxed stats.
- Werewolf: Similar to humans, but with permanent, incurable lycanthropy.
  Can be considered a "challenge race."

New Roles
- Cartomancer: A spellcaster with a focus on spell cards (scrolls). They start
  with a number of scrolls, and whenever they use one it has a chance of not
  being consumed. Unfortunately, their skill selection is awful, and they
  receive a harsh alignment penalty for using magic markers (you feel guilty
  for forging a card). The entire role affectionately parodies various trading
  card games and the shows that center on them.
- Dragonmaster: This role is similar to that of a knight, but they begin with
  a pet baby dragon instead of a pony, which they can eventually raise into a
  powerful steed. Due to being raised by dragons, they are averse to wearing
  dragon scales and dragon scale mail, which makes their midgame very difficult.
  Their quest artifact is Sharur, a talking ornate mace.

New Artifacts
- Gungnir
- Gleipnir
- Gae Bulg
- Gae Dearg
- Gae Buidhe
- Carnwennan
- Seafoam
- Luckless Folly
- Dismounter
- Final Death
- Unlimited Moon
- Reaper
- War's Sword
- Sharur (Dragonmaster quest artifact)
- The Holographic Void Lily (Cartomancer quest artifact)
- Vladsbane (joke artifact, must be wished for)
- The King in Yellow (summons an optional boss)

Dungeon Generation
- Statuary level: A level with many statues and statue traps. One statue
  contains a wand of wonder.
- The Void: A dangerous one level branch with a very large amount of loot, but
  filled with a number of extremely annoying void-themed monsters and a single
  void dragon.
- Beast den: A special room which contains a number of wild animals.
- Archery Shops: Sell arrows and bows.