@@ -123,6 +123,11 @@ New Races
   made up for by low maxed stats.
 - Werewolf: Similar to humans, but with permanent, incurable lycanthropy.
   Can be considered a "challenge race."
+- Infernal: Gain regeneration and have a strong set of abilities, but many
+  monsters are hostile to them and they are vulnerable to silver.
+- Angel: Gain flying and have no opposed races, but aggravate monsters and
+  have subpar physical abilities. All demon lords will attack them instead
+  of chatting.
 
 New Roles
 - Cartomancer: A spellcaster with a focus on spell cards (scrolls). They start
